--- a/.github/ISSUE_TEMPLATE/content_issue.yml
+++ b/.github/ISSUE_TEMPLATE/content_issue.yml
@@ -22,7 +22,9 @@ body:
     id: description
     attributes:
       label: Describe your issue
-      placeholder: Write a description of your issue with the content here.
+      placeholder: |
+      Write a description of your issue with the content here.
+      If you have wording to add, update or remove - include it here.
     validations:
       required: true
   - type: textarea
