--- a/.github/ISSUE_TEMPLATE/content_issue.yml
+++ b/.github/ISSUE_TEMPLATE/content_issue.yml
@@ -9,26 +9,28 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this issue. Please ensure that the title you select above accurately reflects your issue, then fill out the sections below. 
-  - type: checkboxes
-    id: checks
-    attributes:
-      label: Before you start
-      options:
-        - label: I have checked that this issue has not already been raised on this repository's 'Issues' page.
-          required: true
-        - label: I am a member of the Steering Committee or a Working Group for this project.
-          required: false
+  # - type: checkboxes
+  #   id: checks
+  #   attributes:
+  #     label: Before you start
+  #     options:
+  #       - label: I have checked that this issue has not already been raised on this repository's 'Issues' page.
+  #         required: true
+  #       - label: I am a member of the Steering Committee or a Working Group for this project.
+  #         required: false
   - type: textarea
     id: description
     attributes:
       label: Describe your issue
-      placeholder: Write a description of your issue with the content here.
+      placeholder: |
+        Write a description of your issue here. 
+        If you have wording to add, update or remove - include it here.
     validations:
       required: true
   - type: textarea
     id: references
     attributes:
-      label: Provide links to relevant content, text, code, or external resources.
+      label: Provide links to any relevant content, text, code, or external resources.
     validations:
       required: false
   - type: input
