Add labels field to new issue template

--- a/.github/ISSUE_TEMPLATE/new.yml
+++ b/.github/ISSUE_TEMPLATE/new.yml
@@ -1,5 +1,6 @@
 name: Add or update an initiative
 description: Propose a new initiative or changes to an existing record
+labels: "ingest"
 title: "[Add/Update] "
 body:
   - type: input
